mostly fixed collapsed nav - still has height problem on .fixed

--- a/style.css
+++ b/style.css
@@ -691,6 +691,7 @@ a:active {
 	width: 100%;
 	position: absolute;
 	bottom: 0;
+	min-height: 50px;
 	margin-bottom: 0;
 	border-radius: 0;
 
@@ -700,11 +701,24 @@ a:active {
 	display: none;
 }
 
+.navbar-collapse {
+	position: relative;
+	background-color: white;
+	margin: 0;
+}
+
+.navbar-collapse > ul {
+	width: 100%;
+	margin: 0 auto;
+	text-align: center;
+	line-height: 50px;
+}
+
 .fixed {
 	position: fixed; 
 	top: 0; 
-	height: 50px; 
 	z-index: 1;
+	height: 50px;
 	width: 100%;
 }
 
